--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ joblib==1.4.2
 scikit-learn==1.0.2
 pandas==1.3.5
 mysql-connector==2.2.9
-numpy==1.26.4
-flask-cors==3.0.10
 googletrans==4.0.0-rc1
 spacy==3.7.5
+numpy==1.26.4
+gunicorn==22.0.0
+flask-cors==3.0.10
