--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ spacy==3.7.5
 numpy==1.26.4
 gunicorn==22.0.0
 flask-cors==3.0.10
+flask-socketio==5.3.6
+nltk==3.8.1
+eventlet==0.36.1
+sqlalchemy==2.0.31
